Initial support for mac os revere and vision

--- a/apps/revere/CMakeLists.txt
+++ b/apps/revere/CMakeLists.txt
@@ -2,16 +2,24 @@ cmake_minimum_required(VERSION 3.14)
 project(revere VERSION 0.0.1)
 
 include(FetchContent)
- 
-set(CMAKE_INSTALL_RPATH $ORIGIN)
 
-FetchContent_Declare(
-  traypp
-  GIT_REPOSITORY https://github.com/dicroce/traypp
-  GIT_TAG master
-)
+if(APPLE)
+    set(CMAKE_INSTALL_RPATH "@executable_path/../lib;@executable_path")
+    set(CMAKE_BUILD_RPATH "@executable_path/../lib;@executable_path/../../libs/r_utils;@executable_path/../../libs/r_ui_utils;@executable_path/../../libs/r_av;@executable_path/../../libs/r_pipeline;@executable_path/../../libs/r_storage;@executable_path/../../libs/r_motion;@executable_path/../../libs/r_onvif;@executable_path/../../libs/r_http;@executable_path/../../libs/r_db;@executable_path/../../libs/r_fakey")
+else()
+    set(CMAKE_INSTALL_RPATH $ORIGIN)
+endif()
 
-FetchContent_MakeAvailable(traypp)
+# System tray support (not yet available on macOS)
+if(NOT CMAKE_SYSTEM_NAME MATCHES "Darwin")
+    FetchContent_Declare(
+      traypp
+      GIT_REPOSITORY https://github.com/dicroce/traypp
+      GIT_TAG master
+    )
+
+    FetchContent_MakeAvailable(traypp)
+endif()
 
 FetchContent_Declare(
     pugixml
@@ -81,10 +89,14 @@ target_link_libraries(
     gstreamer::gstreamer
     ffmpeg::ffmpeg
     ${OPENGL_LIBRARIES}
-    tray
     uuid::uuid
     platform::platform
 )
+
+# Link tray library only on platforms where it's available
+if(NOT CMAKE_SYSTEM_NAME MATCHES "Darwin")
+    target_link_libraries(revere tray)
+endif()
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
     if (CMAKE_BUILD_TYPE STREQUAL "Debug")
