--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,17 @@
             "cwd": "C:\\Program Files (x86)\\revere\\revere",
             "environment": [],
             "console": "externalTerminal"
-        }
-
+        },
+        {
+            "name": "(Windows) r_http_ut",
+            "type": "cppvsdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}\\build\\libs\\r_http\\ut\\Debug\\r_http_ut.exe",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}\\build",
+            "environment": [],
+            "console": "externalTerminal"
+        },
     ]
 }
