--- a/libs/r_pipeline/CMakeLists.txt
+++ b/libs/r_pipeline/CMakeLists.txt
@@ -34,4 +34,54 @@ install(TARGETS r_pipeline
     ARCHIVE DESTINATION revere
 )
 
+# Post-build: Copy GStreamer DLLs to build output directory for testing on Windows
+if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
+    file(TO_CMAKE_PATH $ENV{GST_TOP_DIR} GST_TOP_DIR)
+
+    add_custom_command(TARGET r_pipeline POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different
+            "${GST_TOP_DIR}/bin/gio-2.0-0.dll"
+            "${GST_TOP_DIR}/bin/glib-2.0-0.dll"
+            "${GST_TOP_DIR}/bin/gmodule-2.0-0.dll"
+            "${GST_TOP_DIR}/bin/gobject-2.0-0.dll"
+            "${GST_TOP_DIR}/bin/gstapp-1.0-0.dll"
+            "${GST_TOP_DIR}/bin/gstaudio-1.0-0.dll"
+            "${GST_TOP_DIR}/bin/gstbase-1.0-0.dll"
+            "${GST_TOP_DIR}/bin/gstcodecparsers-1.0-0.dll"
+            "${GST_TOP_DIR}/bin/gstnet-1.0-0.dll"
+            "${GST_TOP_DIR}/bin/gstpbutils-1.0-0.dll"
+            "${GST_TOP_DIR}/bin/gstreamer-1.0-0.dll"
+            "${GST_TOP_DIR}/bin/gstrtp-1.0-0.dll"
+            "${GST_TOP_DIR}/bin/gstrtsp-1.0-0.dll"
+            "${GST_TOP_DIR}/bin/gstrtspserver-1.0-0.dll"
+            "${GST_TOP_DIR}/bin/gstsdp-1.0-0.dll"
+            "${GST_TOP_DIR}/bin/gsttag-1.0-0.dll"
+            "${GST_TOP_DIR}/bin/gstvideo-1.0-0.dll"
+            "${GST_TOP_DIR}/bin/intl-8.dll"
+            "${GST_TOP_DIR}/bin/pcre2-8-0.dll"
+            "${GST_TOP_DIR}/bin/ffi-7.dll"
+            "${GST_TOP_DIR}/bin/z-1.dll"
+            "${GST_TOP_DIR}/bin/orc-0.4-0.dll"
+            "$<TARGET_FILE_DIR:r_pipeline>"
+        COMMENT "Copying GStreamer DLLs to build output directory"
+    )
+
+    # Copy GStreamer plugins to a subdirectory
+    add_custom_command(TARGET r_pipeline POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E make_directory "$<TARGET_FILE_DIR:r_pipeline>/gstreamer_plugins"
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different
+            "${GST_TOP_DIR}/lib/gstreamer-1.0/gstapp.dll"
+            "${GST_TOP_DIR}/lib/gstreamer-1.0/gstaudioparsers.dll"
+            "${GST_TOP_DIR}/lib/gstreamer-1.0/gstcoreelements.dll"
+            "${GST_TOP_DIR}/lib/gstreamer-1.0/gstrtp.dll"
+            "${GST_TOP_DIR}/lib/gstreamer-1.0/gstrtpmanager.dll"
+            "${GST_TOP_DIR}/lib/gstreamer-1.0/gstrtsp.dll"
+            "${GST_TOP_DIR}/lib/gstreamer-1.0/gsttcp.dll"
+            "${GST_TOP_DIR}/lib/gstreamer-1.0/gstudp.dll"
+            "${GST_TOP_DIR}/lib/gstreamer-1.0/gstvideoparsersbad.dll"
+            "$<TARGET_FILE_DIR:r_pipeline>/gstreamer_plugins"
+        COMMENT "Copying GStreamer plugins to build output directory"
+    )
+endif()
+
 add_subdirectory(ut)
