--- a/libs/r_utils/CMakeLists.txt
+++ b/libs/r_utils/CMakeLists.txt
@@ -43,11 +43,13 @@ if(NOT WIN32)
     target_link_libraries(r_utils PUBLIC dl)
 endif()
 
-# Install the shared library
-install(TARGETS r_utils
-    RUNTIME DESTINATION revere
-    LIBRARY DESTINATION revere
-    ARCHIVE DESTINATION revere
-)
+# Install the shared library (skip on macOS - bundled into .app)
+if(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+    install(TARGETS r_utils
+        RUNTIME DESTINATION revere
+        LIBRARY DESTINATION revere
+        ARCHIVE DESTINATION revere
+    )
+endif()
 
 add_subdirectory(ut)
