--- a/libs/r_ui_utils/CMakeLists.txt
+++ b/libs/r_ui_utils/CMakeLists.txt
@@ -36,9 +36,11 @@ target_link_libraries(
     ${OPENGL_LIBRARIES}
 )
 
-# Install the shared library
-install(TARGETS r_ui_utils
-    RUNTIME DESTINATION revere
-    LIBRARY DESTINATION revere
-    ARCHIVE DESTINATION revere
-)
+# Install the shared library (skip on macOS - bundled into .app)
+if(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+    install(TARGETS r_ui_utils
+        RUNTIME DESTINATION revere
+        LIBRARY DESTINATION revere
+        ARCHIVE DESTINATION revere
+    )
+endif()
