--- a/libs/r_vss/CMakeLists.txt
+++ b/libs/r_vss/CMakeLists.txt
@@ -34,11 +34,13 @@ target_link_libraries(
     gstreamer::gstreamer
 )
 
-# Install the shared library
-install(TARGETS r_vss
-    RUNTIME DESTINATION revere
-    LIBRARY DESTINATION revere
-    ARCHIVE DESTINATION revere
-)
+# Install the shared library (skip on macOS - bundled into .app)
+if(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+    install(TARGETS r_vss
+        RUNTIME DESTINATION revere
+        LIBRARY DESTINATION revere
+        ARCHIVE DESTINATION revere
+    )
+endif()
 
 add_subdirectory(motion_plugins)
