--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,10 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(Windows) Launch Vision",
+            "name": "(Windows) Launch Revere",
             "type": "cppvsdbg",
             "request": "launch",
-            "program": "C:\\Program Files (x86)\\revere\\revere\\vision.exe",
+            "program": "C:\\Program Files (x86)\\revere\\revere\\revere.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "C:\\Program Files (x86)\\revere\\revere",
