--- a/flatpak/io.github.dicroce.Revere.Vision.desktop
+++ b/flatpak/io.github.dicroce.Revere.Vision.desktop
@@ -5,7 +5,7 @@ Name=Vision
 GenericName=Video Playback
 Comment=Video viewer and playback for Revere surveillance system
 Exec=vision
-Icon=io.github.dicroce.Vision
+Icon=io.github.dicroce.Revere.Vision
 Terminal=false
 Categories=Utility;Video;AudioVideo;Player;
 Keywords=video;playback;viewer;surveillance;
