--- a/apps/vision/CMakeLists.txt
+++ b/apps/vision/CMakeLists.txt
@@ -1,11 +1,14 @@
 cmake_minimum_required(VERSION 3.14)
 project(vision)
 
-if(APPLE)
-    set(CMAKE_INSTALL_RPATH "@executable_path/../lib;@executable_path")
-    set(CMAKE_BUILD_RPATH "@executable_path/../lib;@executable_path/../../libs/r_utils;@executable_path/../../libs/r_ui_utils;@executable_path/../../libs/r_av;@executable_path/../../libs/r_pipeline;@executable_path/../../libs/r_storage;@executable_path/../../libs/r_motion;@executable_path/../../libs/r_onvif;@executable_path/../../libs/r_http;@executable_path/../../libs/r_db")
-else()
-    set(CMAKE_INSTALL_RPATH $ORIGIN)
+# Set RPATH - skip for Flatpak builds (they use standard library paths)
+if(NOT FLATPAK_BUILD)
+    if(APPLE)
+        set(CMAKE_INSTALL_RPATH "@executable_path/../lib;@executable_path")
+        set(CMAKE_BUILD_RPATH "@executable_path/../lib;@executable_path/../../libs/r_utils;@executable_path/../../libs/r_ui_utils;@executable_path/../../libs/r_av;@executable_path/../../libs/r_pipeline;@executable_path/../../libs/r_storage;@executable_path/../../libs/r_motion;@executable_path/../../libs/r_onvif;@executable_path/../../libs/r_http;@executable_path/../../libs/r_db")
+    else()
+        set(CMAKE_INSTALL_RPATH $ORIGIN)
+    endif()
 endif()
 
 find_package(OpenGL)
