--- a/libs/imgui/CMakeLists.txt
+++ b/libs/imgui/CMakeLists.txt
@@ -1,19 +1,9 @@
 cmake_minimum_required(VERSION 3.14)
 project(imgui)
 
-FetchContent_Declare(
-  glfw3
-  GIT_REPOSITORY https://github.com/glfw/glfw
-  GIT_TAG 3.4
-)
-set(GLFW_INSTALL OFF CACHE BOOL "Disable GLFW install target")
-set(GLFW_BUILD_WAYLAND OFF CACHE BOOL "Disable Wayland support")
-set(GLFW_BUILD_X11 ON CACHE BOOL "Enable X11 support")
-# Build with both GLX and EGL for better compatibility across systems
-set(GLFW_USE_EGL ON CACHE BOOL "Use EGL for context creation")
-FetchContent_MakeAvailable(glfw3)
-
-find_package(OpenGL REQUIRED)
+# SDL2 dependency - find system SDL2 via pkg-config or CMake find_package
+include(FindPkgConfig)
+pkg_search_module(SDL2 REQUIRED sdl2)
 
 file(GLOB R_IMGUI_HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/include/r_imgui/*.h
@@ -42,12 +32,17 @@ target_include_directories(
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/imgui>
     $<INSTALL_INTERFACE:include>
     $<INSTALL_INTERFACE:include/imgui>
+    ${SDL2_INCLUDE_DIRS}
 )
 
 target_link_libraries(
     imgui
-    glfw
-    ${OPENGL_LIBRARIES}
+    ${SDL2_LIBRARIES}
+)
+
+target_link_directories(
+    imgui PUBLIC
+    ${SDL2_LIBRARY_DIRS}
 )
 
 # Install the static library (skip on macOS - bundled into .app)
