--- a/apps/vision/CMakeLists.txt
+++ b/apps/vision/CMakeLists.txt
@@ -11,10 +11,6 @@ if(NOT FLATPAK_BUILD)
     endif()
 endif()
 
-# SDL2 dependency
-include(FindPkgConfig)
-pkg_search_module(SDL2 REQUIRED sdl2)
-
 file(GLOB VISION_HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h
 )
@@ -53,9 +49,8 @@ target_include_directories(
     vision PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
-    ${SDL2_INCLUDE_DIRS}
 )
- 
+
 target_link_libraries(
     vision
     r_ui_utils
@@ -68,12 +63,7 @@ target_link_libraries(
     imgui
     gstreamer::gstreamer
     ffmpeg::ffmpeg
-    ${SDL2_LIBRARIES}
-)
-
-target_link_directories(
-    vision PUBLIC
-    ${SDL2_LIBRARY_DIRS}
+    SDL2::SDL2
 )
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
