--- a/libs/r_ui_utils/CMakeLists.txt
+++ b/libs/r_ui_utils/CMakeLists.txt
@@ -1,10 +1,6 @@
 cmake_minimum_required(VERSION 3.14)
 project(r_ui_utils)
 
-# SDL2 dependency (already found by imgui, but ensure it's available)
-include(FindPkgConfig)
-pkg_search_module(SDL2 REQUIRED sdl2)
-
 file(GLOB R_UI_UTILS_HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/include/r_ui_utils/*.h
 )
@@ -23,7 +19,6 @@ target_include_directories(
     r_ui_utils PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
-    ${SDL2_INCLUDE_DIRS}
 )
 
 target_compile_definitions(
@@ -35,12 +30,7 @@ target_link_libraries(
     r_ui_utils PUBLIC
     imgui
     r_utils
-    ${SDL2_LIBRARIES}
-)
-
-target_link_directories(
-    r_ui_utils PUBLIC
-    ${SDL2_LIBRARY_DIRS}
+    SDL2::SDL2
 )
 
 # Install the shared library (skip on macOS - bundled into .app)
